tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-hex-esc-2.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-2 = "\xG0"
  |                    ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
